--- a/views/main/index.html
+++ b/views/main/index.html
@@ -12,6 +12,8 @@
     <script src="/public/js/index.js"></script>
 </head>
 <body>
+
+<!--顶部logo加登录位置开始-->
 <div class="big">
     <nav id="mainNav" class="navbar hold">
     <div class="container">
@@ -51,7 +53,9 @@
     </div>
 </nav>
 </div>
+<!--顶部结束-->
 
+<!--登录开始-->
 <div class="shade" style="display: none" id="loginBox">
     <div class="login">
         <span></span>
@@ -67,6 +71,9 @@
         </ul>
     </div>
 </div>
+<!--登录结束-->
+
+<!--注册开始-->
 <div class="shade" style="display: none" id="registerBox">
     <div class="register">
         <span></span>
@@ -87,6 +94,9 @@
         </ul>
     </div>
 </div>
+<!--注册结束-->
+
+<!--导航部分开始-->
 <nav class="outer clearfix">
     <div class="menu clearfix">
         <div class="server clearfix">
@@ -108,7 +118,7 @@
                 <a href="">首页</a>
             </li>
             <li class="nav_head">
-                <a href="">本科留学</a>
+                <a href="">英国本科留学</a>
                 <div class="nav_content">
                     <div class="nav_part">
                         <h4>留学申请</h4>
@@ -146,13 +156,13 @@
                 </div>
             </li>
             <li class="nav_head">
-                <a href="">研究生留学</a>
+                <a href="">英国研究生留学</a>
             </li>
             <li class="nav_head">
-                <a href="">中学留学</a>
+                <a href="">英国中学留学</a>
             </li>
             <li class="nav_head">
-                <a href="">本科转学</a>
+                <a href="">英国本科转学</a>
             </li>
             <li class="nav_head">
                 <a href="">出国语言培训</a>
@@ -166,6 +176,9 @@
         </ul>
     </div>
 </nav>
+<!--导航部分结束-->
+
+<!--图片轮转开始-->
 <div class="ban_bg">
     <ul class="bg_part">
         <li><a href="#"></a></li>
@@ -177,6 +190,9 @@
         <li></li>
     </ul>
 </div>
+<!--图片轮转结束-->
+
+<!--图片轮转下的补充栏开始-->
 <div class="ban_foot clearfix">
     <div class="ban_item">
         <ul class="clearfix">
@@ -211,6 +227,9 @@
         </ul>
     </div>
 </div>
+<!--补充栏结束-->
+
+<!--学校搜索开始-->
 <section class="school">
     <div class="school_search">
         <h3>学校搜索</h3>
@@ -331,6 +350,9 @@
         </div>
     </div>
 </section>
+<!--学校搜索结束-->
+
+<!--留学流程开始-->
 <section class="study_procedure">
     <div class="section_title">
         <p>留学流程</p>
@@ -370,16 +392,350 @@
         </a>
     </div>
 </section>
-<section class="study_abroad">
-    <div class="section_title">
-        <p>本科留学</p>
-    </div>
-    <div class="">
+<!--留学流程结束-->
 
+<!--本科留学开始-->
+<section class="study_abroad undergraduate clearfix">
+    <div class="section_title">
+        <p>英国本科留学</p>
+    </div>
+    <div class="study_abroad_content clearfix">
+        <div class="study_abroad_nav">
+            <ul>
+                <li><a href="">留学规划</a></li>
+                <li><a href="">专业推荐</a></li>
+                <li><a href="">院校申请</a></li>
+                <li><a href="">签证指南</a></li>
+                <li><a href="">申请规划表</a></li>
+            </ul>
+        </div>
+        <div class="study_abroad_mid">
+            <div class="mid_article">
+                <ul class="left">
+                    <li><a href="">英国留学个人陈述如何写才会让人眼前一亮</a></li>
+                    <li><a href="">英国本科预料申请方案</a></li>
+                    <li><a href="">英国本科申请方案</a></li>
+                    <li><a href="">英国留学取得diploma毕业和degree毕业回国后境遇大不同</a></li>
+                </ul>
+                <ul class="right">
+                    <li><a href="">英国大学offer发放率低的高校，获得高学位较容易</a></li>
+                    <li><a href="">留学英国就业7条途径送给即将毕业学生们</a></li>
+                    <li><a href="">留学在英国的日常礼仪</a></li>
+                    <li><a href="">盘点2017年开放春季预科入学的英国大学</a></li>
+                </ul>
+            </div>
+            <div class="mid_img">
+                <p><a href="">留学评估</a></p>
+                <p>
+                    <a href="">背景提升</a>
+                    <a href="">考试培训</a>
+                </p>
+                <p><a href="">留学申请</a></p>
+                <p><a href="">面试指导</a></p>
+                <p><a href="">签证服务</a></p>
+            </div>
+        </div>
+    </div>
+    <div class="study_abroad_case clearfix">
+        <div class="case_title clearfix">
+            <a href="">录取案例</a>
+            <a href="">高分案例</a>
+        </div>
+        <div class="case_content">
+            <p>SAT的完美规划 2400满分经验</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT快速提分 个性化方案</p>
+            <ul style="display: block">
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT精品强化 轻松提升</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT突破自我 从1840到2240</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT的完美规划 2400满分经验</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+        </div>
     </div>
 </section>
+<!--本科留学结束-->
 
+<!--研究生留学开始-->
+<section class="study_abroad postgraduate clearfix">
+    <div class="section_title">
+        <p>英国研究生留学</p>
+    </div>
+    <div class="study_abroad_content clearfix">
+        <div class="study_abroad_nav">
+            <ul>
+                <li><a href="">留学规划</a></li>
+                <li><a href="">专业推荐</a></li>
+                <li><a href="">院校申请</a></li>
+                <li><a href="">签证指南</a></li>
+                <li><a href="">申请规划表</a></li>
+            </ul>
+        </div>
+        <div class="study_abroad_mid">
+            <div class="mid_article">
+                <ul class="left">
+                    <li><a href="">英国毕业生就业率或创十年来最高</a></li>
+                    <li><a href="">留学十年寒窗苦 近四千中国学生获英国永居</a></li>
+                    <li><a href="">英国留学生毕业后，都干嘛去了呢？</a></li>
+                    <li><a href="">英国大学毕业生调查 最好和最难找工作的十大城市</a></li>
+                </ul>
+                <ul class="right">
+                    <li><a href="">英国硕士预科申请方案</a></li>
+                    <li><a href="">英国院校提供带薪实习 为留学生未来就业加分</a></li>
+                    <li><a href="">2018年如何申请到世界排名前50的学校</a></li>
+                    <li><a href="">英国名校申请中需知的七大热点问题</a></li>
+                </ul>
+            </div>
+            <div class="mid_img">
+                <p><a href="">留学评估</a></p>
+                <p>
+                    <a href="">背景提升</a>
+                    <a href="">考试培训</a>
+                </p>
+                <p><a href="">留学申请</a></p>
+                <p><a href="">面试指导</a></p>
+                <p><a href="">签证服务</a></p>
+            </div>
+        </div>
+    </div>
+    <div class="study_abroad_case clearfix">
+        <div class="case_title clearfix">
+            <a href="">录取案例</a>
+            <a href="">高分案例</a>
+        </div>
+        <div class="case_content">
+            <p>SAT的完美规划 2400满分经验</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT快速提分 个性化方案</p>
+            <ul style="display: block">
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT精品强化 轻松提升</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT突破自我 从1840到2240</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT的完美规划 2400满分经验</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+        </div>
+    </div>
+</section>
+<!--研究生留学结束-->
 
+<!--中学留学开始-->
+<section class="study_abroad middle_school clearfix">
+    <div class="section_title">
+        <p>英国中学留学</p>
+    </div>
+    <div class="study_abroad_content clearfix">
+        <div class="study_abroad_nav">
+            <ul>
+                <li><a href="">留学规划</a></li>
+                <li><a href="">行程准备</a></li>
+                <li><a href="">院校申请</a></li>
+                <li><a href="">中学留学</a></li>
+                <li><a href="">申请规划表</a></li>
+            </ul>
+        </div>
+        <div class="study_abroad_mid">
+            <div class="mid_article">
+                <ul class="left">
+                    <li><a href="">高考后英国留学也不晚</a></li>
+                    <li><a href="">英国中学申请方案</a></li>
+                    <li><a href="">英国寄宿中学逐年升温 年龄越小融入越佳</a></li>
+                    <li><a href="">英国高中留学需要什么申请材料</a></li>
+                </ul>
+                <ul class="right">
+                    <li><a href="">高中生英国留学面试问题与技巧</a></li>
+                    <li><a href="">最适合中国学生的“世界高考”A-Level</a></li>
+                    <li><a href="">英国留学 私立中学学制你了解吗?</a></li>
+                    <li><a href="">留英低龄化 寄宿中学受青睐</a></li>
+                </ul>
+            </div>
+            <div class="mid_img">
+                <p><a href="">留学评估</a></p>
+                <p>
+                    <a href="">背景提升</a>
+                    <a href="">考试培训</a>
+                </p>
+                <p><a href="">留学申请</a></p>
+                <p><a href="">面试指导</a></p>
+                <p><a href="">签证服务</a></p>
+            </div>
+        </div>
+    </div>
+    <div class="study_abroad_case clearfix">
+        <div class="case_title clearfix">
+            <a href="">录取案例</a>
+            <a href="">高分案例</a>
+        </div>
+        <div class="case_content">
+            <p>SAT的完美规划 2400满分经验</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT快速提分 个性化方案</p>
+            <ul style="display: block">
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT精品强化 轻松提升</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT突破自我 从1840到2240</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+            <p>SAT的完美规划 2400满分经验</p>
+            <ul>
+                <li>基本成绩：SAT1540 提分860</li>
+                <li>提分后成绩：SAT2400</li>
+            </ul>
+        </div>
+    </div>
+</section>
+<!--中学留学结束-->
+
+<!--能力培训开始-->
+<section class="training clearfix">
+    <div class="section_title">
+        <p>能力培训</p>
+    </div>
+    <ul class="training_list clearfix">
+        <li><a href="">托福</a></li>
+        <li><a href="">雅思</a></li>
+        <li><a href="">GRE</a></li>
+        <li><a href="">GMAT</a></li>
+        <li><a href="">SAT</a></li>
+        <li><a href="">SSAT</a></li>
+        <li class="last_part"><a href="">ACT</a></li>
+    </ul>
+    <div class="training_block clearfix">
+        <div class="training_part">
+            <div class="training_img">
+                <i></i>
+                <p><a href="">GRE</a></p>
+                <p><a href="">考试动态</a></p>
+            </div>
+            <div class="training_content">
+                <ul>
+                    <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
+                    <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
+                    <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
+                    <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="training_part">
+            <div class="training_img">
+                <i></i>
+                <p><a href="">GRE</a></p>
+                <p><a href="">学习技巧</a></p>
+            </div>
+            <div class="training_content">
+                <ul>
+                    <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
+                    <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
+                    <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
+                    <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="training_part last_part">
+            <div class="training_img">
+                <i></i>
+                <p><a href="">GRE</a></p>
+                <p><a href="">学习经验</a></p>
+            </div>
+            <div class="training_content">
+                <ul>
+                    <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
+                    <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
+                    <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
+                    <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="training_part">
+        <div class="training_img">
+            <i></i>
+            <p><a href="">GRE</a></p>
+            <p><a href="">名师指导</a></p>
+        </div>
+        <div class="training_content">
+            <ul>
+                <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
+                <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
+                <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
+                <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+            </ul>
+        </div>
+    </div>
+        <div class="training_part">
+            <div class="training_img">
+                <i></i>
+                <p><a href="">GRE</a></p>
+                <p><a href="">考试指南</a></p>
+            </div>
+            <div class="training_content">
+                <ul>
+                    <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
+                    <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
+                    <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
+                    <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="training_part last_part">
+            <div class="training_img">
+                <i></i>
+                <p><a href="">GRE</a></p>
+                <p><a href="">英语学习</a></p>
+            </div>
+            <div class="training_content">
+                <ul>
+                    <li><span>●</span><a href="">GRE备考：单词和语法知识基础圣诞上单速度是</a></li>
+                    <li><span>●</span><a href="">GRE考试答题节奏 注意事项训练方法</a></li>
+                    <li><span>●</span><a href="">GRE填空的四大类特点（上）</a></li>
+                    <li><span>●</span><a href="">新、老GRE考试的填空题型有什么差异？</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+<!--能力培训结束-->
 
 
 
@@ -389,6 +745,7 @@
 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!--底部版权开始-->
 <footer class="footer">
     <div class="catalog">
         <ul class="clearfix">
@@ -467,6 +824,9 @@
         <p>Copyright&copy;2017&nbsp;hwlxue.com 海外留学网 All Rights Reserved</p>
     </div>
 </footer>
+<!--底部版权结束-->
+
+<!--友情链接开始-->
 <div class="friend_link">
     <div class="links clearfix">
         <span>友情链接：</span>
@@ -480,5 +840,6 @@
         </ul>
     </div>
 </div>
+<!--友情链接结束-->
 </body>
 </html>
